Alteração de teste
Foi alterado algumas linhas para eu ver como funciona o GitHub

--- a/github.html
+++ b/github.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #ccc;
         }
 
         header {
-            background-color: #333;
+            background-color: #1127ff;
             color: #fff;
-            text-align: center;
             padding: 1em 0;
         }
 
@@ -33,12 +31,12 @@
         }
 
         nav a:hover {
-            background-color: #ddd;
+            background-color: #0c0d49;
             color: #333;
         }
 
         .container {
-            width: 80%;
+            width: 120%;
             margin: auto;
             overflow: hidden;
         }
@@ -64,7 +62,7 @@
 
         label {
             display: block;
-            margin-bottom: 8px;
+            margin-bottom: 15px;
         }
 
         input,
