--- a/curso.html
+++ b/curso.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Bebas, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4a4f4;
+            background-color: #0c0d49;
         }
 
         header {
@@ -64,21 +64,21 @@
         input,
         textarea {
             width: 100%;
-            padding: 8px;
+            padding: 10px;
             margin-bottom: 20px;
             box-sizing: border-box;
         }
 
         button {
-            background-color: #333;
+            background-color: #ccc;
             color: #fff;
-            padding: 10px 15px;
+            padding: 20px 25px;
             border: none;
             cursor: pointer;
         }
 
         button:hover {
-            background-color: #555;
+            background-color: #1127ff;
         }
     </style>
     <title>Sua Página de Destino</title>
